<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.activities.AddUpdateFilmActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/add_film_tool_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primaryColor"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/film_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/add_film_tool_bar"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/add_film_img_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/add_photo"
                app:layout_constraintBottom_toBottomOf="@+id/film_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.958"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.945"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/film_name_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                android:layout_marginTop="@dimen/_8sdp"
                app:layout_constraintTop_toBottomOf="@+id/film_image">

                <EditText
                    android:id="@+id/film_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_16sdp"
                    android:hint="@string/film_name"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/film_genre_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                app:layout_constraintTop_toBottomOf="@+id/film_name_text_input_layout">

                <EditText
                    android:id="@+id/film_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_16sdp"
                    android:hint="@string/film_genre"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/film_description_text_input_layout"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toBottomOf="@+id/film_genre_text_input_layout">

                <EditText
                    android:id="@+id/film_description"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:layout_margin="@dimen/_16sdp"
                    android:hint="@string/film_description"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/add_film_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_film"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_margin="@dimen/_16sdp"
                app:layout_constraintTop_toBottomOf="@+id/film_description_text_input_layout"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
